--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "vue_shop",
   "version": "0.1.0",
+  "author": "macai<macai@skyrity.com>",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.4.4",
     "element-ui": "^2.4.5",
+    "qs": "^6.9.1",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-axios": "^2.1.5",
+    "vue-router": "^3.1.3",
+    "vue-table-with-tree-grid": "^0.2.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -23,6 +28,8 @@
     "babel-plugin-component": "^1.1.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.10"
   }
